[master] basic http resolving
