# internal/domain/endpoint.go
@@ -1,0 +1,6 @@
+package domain
+
+type Endpoint struct {
+	ServiceName string
+	Addrs       []string
+}
