# pkg/example_api/makosh-be_api.pb.gw.go
@@ -1,163 +1,0 @@
-// Code generated by protoc-gen-grpc-gateway. DO NOT EDIT.
-// source: grpc/makosh-be_api.proto
-
-/*
-Package example_api is a reverse proxy.
-
-It translates gRPC into RESTful JSON APIs.
-*/
-package example_api
-
-import (
-	"context"
-	"io"
-	"net/http"
-
-	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
-	"github.com/grpc-ecosystem/grpc-gateway/v2/utilities"
-	"google.golang.org/grpc"
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/grpclog"
-	"google.golang.org/grpc/metadata"
-	"google.golang.org/grpc/status"
-	"google.golang.org/protobuf/proto"
-)
-
-// Suppress "imported and not used" errors
-var _ codes.Code
-var _ io.Reader
-var _ status.Status
-var _ = runtime.String
-var _ = utilities.NewDoubleArray
-var _ = metadata.Join
-
-func request_MakoshBeAPI_Version_0(ctx context.Context, marshaler runtime.Marshaler, client MakoshBeAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq PingRequest
-	var metadata runtime.ServerMetadata
-
-	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-
-	msg, err := client.Version(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func local_request_MakoshBeAPI_Version_0(ctx context.Context, marshaler runtime.Marshaler, server MakoshBeAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq PingRequest
-	var metadata runtime.ServerMetadata
-
-	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-
-	msg, err := server.Version(ctx, &protoReq)
-	return msg, metadata, err
-
-}
-
-// RegisterMakoshBeAPIHandlerServer registers the http handlers for service MakoshBeAPI to "mux".
-// UnaryRPC     :call MakoshBeAPIServer directly.
-// StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
-// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterMakoshBeAPIHandlerFromEndpoint instead.
-func RegisterMakoshBeAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux, server MakoshBeAPIServer) error {
-
-	mux.Handle("POST", pattern_MakoshBeAPI_Version_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/makosh_be_api.MakoshBeAPI/Version", runtime.WithHTTPPathPattern("/v1/version"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_MakoshBeAPI_Version_0(annotatedContext, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_MakoshBeAPI_Version_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	return nil
-}
-
-// RegisterMakoshBeAPIHandlerFromEndpoint is same as RegisterMakoshBeAPIHandler but
-// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
-func RegisterMakoshBeAPIHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
-	conn, err := grpc.NewClient(endpoint, opts...)
-	if err != nil {
-		return err
-	}
-	defer func() {
-		if err != nil {
-			if cerr := conn.Close(); cerr != nil {
-				grpclog.Errorf("Failed to close conn to %s: %v", endpoint, cerr)
-			}
-			return
-		}
-		go func() {
-			<-ctx.Done()
-			if cerr := conn.Close(); cerr != nil {
-				grpclog.Errorf("Failed to close conn to %s: %v", endpoint, cerr)
-			}
-		}()
-	}()
-
-	return RegisterMakoshBeAPIHandler(ctx, mux, conn)
-}
-
-// RegisterMakoshBeAPIHandler registers the http handlers for service MakoshBeAPI to "mux".
-// The handlers forward requests to the grpc endpoint over "conn".
-func RegisterMakoshBeAPIHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
-	return RegisterMakoshBeAPIHandlerClient(ctx, mux, NewMakoshBeAPIClient(conn))
-}
-
-// RegisterMakoshBeAPIHandlerClient registers the http handlers for service MakoshBeAPI
-// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "MakoshBeAPIClient".
-// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "MakoshBeAPIClient"
-// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
-// "MakoshBeAPIClient" to call the correct interceptors.
-func RegisterMakoshBeAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux, client MakoshBeAPIClient) error {
-
-	mux.Handle("POST", pattern_MakoshBeAPI_Version_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/makosh_be_api.MakoshBeAPI/Version", runtime.WithHTTPPathPattern("/v1/version"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_MakoshBeAPI_Version_0(annotatedContext, inboundMarshaler, client, req, pathParams)
-		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_MakoshBeAPI_Version_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	return nil
-}
-
-var (
-	pattern_MakoshBeAPI_Version_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "version"}, ""))
-)
-
-var (
-	forward_MakoshBeAPI_Version_0 = runtime.ForwardResponseMessage
-)
